[tool.poetry]
name = "bwsa-beta-supply"
version = "0.1.0"
description = ""
authors = ["Aviv Levinsky <levinskyaviv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
numpy = "^1.26.3"
requests = "^2.31.0"
yfinance = "^0.2.34"
rich = "^13.7.0"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
